--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -6,7 +7,8 @@
 
 body {
     font-family: "Times New Roman", Times, serif;
-    background-color: rgba(131, 30, 30, 0.61);
+    background-color: #f0f0f0;
+    margin: 0;
 }
 
 header {
@@ -15,6 +17,7 @@ header {
     justify-content: space-between;
     padding: 10px;
     background-color: rgb(36, 31, 31);
+    color: #fff;
 }
 
 nav ul {
@@ -30,38 +33,59 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: #fffcfc;
+    color: #fff;
     font-weight: bold;
 }
 
-.secondary-header {
-    background-color: #222;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-}
-
-.logo {
-    width: auto;
-    height: auto;
+.container {
+    width: 80%;
+    margin: 0 auto;
 }
 
 .logo-chist {
     width: auto;
-    height: 120px;
+    height: 80px;
+}
+
+main {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.search-bar {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end; 
+    margin-bottom: 20px;
+}
+
+#search-input {
+    padding: 10px;
+    width: 70%;
+}
+
+#search-button {
+    padding: 10px;
+    background-color: #3498db;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    width: 30%;
 }
 
 #product-list {
     display: flex;
     flex-wrap: wrap;
-    justify-self: center;
+    justify-content: space-around;
 }
 
 .produto-single {
     border: 1px solid #ccc;
     padding: 10px;
-    margin: 15px; 
+    margin: 15px;
     width: 300px;
+    text-align: center;
 }
 
 .produto-single img {
@@ -69,25 +93,22 @@ nav ul li a {
     height: auto;
 }
 
-#cart {
+.cart-container {
     border: 1px solid #ccc;
-    padding: 35px; 
-    margin-top: 120px;
-    display: flex; 
-    justify-self: center;
-    width: 650px;
-    height: 500px;
-    top: 300px;
-    left: 600px
-}    
-
-#cart-single img {
-    width: 80px; 
+    width: 35%;
+    height: 450px;
+    box-sizing: border-box;
+    margin-top: 70px; 
+    margin-right: 20px; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    float: right;
+}
+#cart-list img {
+    width: 50px;
     height: auto;
-    margin-right: 10px; 
 }
 
-main {
-    display: flex;
-    justify-content: space-between;
+#total, #quantity {
+    font-weight: bold;
+    text-align: center; 
 }
